# itsm-service-desk-dashboard

./: .gitignore  =4.14.0  AI_SETUP_GUIDE.md  LICENSE  README.md  app.py  bedrock_guide.md  main.py  pyproject.toml  requirements.md  requirements.txt  test_ai_generation.py  test_kb_save.py
dummydata/: AI_ITSM_Demo_Pack_Instructions_v2.docx  agent_capacity_snapshots.csv  agent_group_membership.csv  agent_performance_history.csv  agent_skills.csv  assignment_groups.csv  category_tree.csv  cmdb_ci.csv  dataset_catalog.csv  incidents_resolved.csv  kb_articles.csv  kb_templates.csv  priority_matrix.csv  schedules.csv  services_catalog.csv  skills_catalog.csv  synonyms_glossary.csv  users_agents.csv  workload_queue.csv
pages/: 1_Incidents_Dashboard.py  1_🎫_Incidents_Dashboard.py  2_Knowledge_Base.py  2_📚_Knowledge_Base.py  3_📊_Service_Analytics.py  4_🔗_Data_Relationships.py  5_AI_Features.py  5_🤖_AI_Features.py  6_Agents.py  6_Data_Management.py  6_👥_Agents.py  6_🗄️_Data_Management.py
utils/: __init__.py  bedrock_client.py  data_ingest.py  data_loader.py  data_service.py  settings_manager.py
