[project]
name = "itsm-service-desk-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34.0",
    "duckdb>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "pymongo>=4.14.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "streamlit==1.37.0",
]
